<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/car_bg"
    android:gravity="right"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/bCamera"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_purple"
            android:drawableLeft="@drawable/glyphicons_011_camera"
            android:drawablePadding="20dp"
            android:gravity="left|center"
            android:onClick="cameraOnClick"
            android:paddingLeft="14dp"
            android:text="@string/main_bCamera"
            android:textSize="25sp" />

        <Button
            android:id="@+id/bManual"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_blue_dark"
            android:drawableLeft="@drawable/glyphicons_150_edit"
            android:drawablePadding="20dp"
            android:gravity="left|center"
            android:onClick="manualOnClick"
            android:paddingLeft="14dp"
            android:text="@string/main_bManual"
            android:textSize="25sp" />

        <Button
            android:id="@+id/bHistory"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_red_light"
            android:drawableLeft="@drawable/glyphicons_113_justify"
            android:drawablePadding="20dp"
            android:gravity="left|center"
            android:onClick="historyOnClick"
            android:paddingLeft="14dp"
            android:text="@string/main_bHistory"
            android:textSize="25sp" />

        <Button
            android:id="@+id/bPreferences"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_orange_light"
            android:drawableLeft="@drawable/glyphicons_150_edit"
            android:drawablePadding="20dp"
            android:gravity="left|center"
            android:onClick="preferencesOnClick"
            android:paddingLeft="14dp"
            android:text="@string/main_bPreferences"
            android:textSize="25sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/ibGithub"
        android:layout_width="21dp"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/llButtons"
        android:contentDescription="@string/main_ibGithub"
        android:onClick="githubOnClick"
        android:src="@drawable/glyphicons_401_github" />

    <ImageButton
        android:id="@+id/ibEmail"
        android:layout_width="21dp"
        android:layout_height="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignTop="@+id/ibGithub"
        android:layout_toLeftOf="@+id/ibGithub"
        android:contentDescription="@string/main_ibEmail"
        android:onClick="emailOnClick"
        android:src="@drawable/glyphicons_419_email" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/app_ver"
        android:textColor="#ffffff" />

</RelativeLayout>