<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/car_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ManualActivity" >

    <EditText
        android:id="@+id/etVehicleNumber1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/holo_blue_dark"
        android:paddingLeft="14dp"
        android:drawableLeft="@drawable/glyphicons_005_car"
        android:gravity="center"
        android:hint="@string/manual_etVehicleNumber"
        android:textSize="25sp"
        android:singleLine="true"
        android:maxLength="7"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etVehicleNumber1"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/bManual"
            android:layout_width="0.0dip"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1.0"
            android:background="@android:color/holo_blue_dark"
            android:drawableLeft="@drawable/glyphicons_221_unshare"
            android:drawablePadding="20dp"
            android:gravity="left|center"
            android:onClick="resetOnClick"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:text="@string/manual_bReset"
            android:textSize="25sp" />

        <Button
            android:id="@+id/bSearch"
            android:layout_width="0.0dip"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1.0"
            android:background="@android:color/holo_blue_dark"
            android:drawableLeft="@drawable/glyphicons_027_search"
            android:drawablePadding="20dp"
            android:gravity="left|center"
            android:onClick="searchOnClick"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:text="@string/manual_bSearch"
            android:textSize="25sp" />

    </LinearLayout>

</RelativeLayout>